sample/misc/error/eval_wdt_array.bfr
codegen [
  $build {
    a: array(_) { x;  i: index; }
  } in
  > a@i@i
]